part_8/sec_2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: crazonhttp-svc
  namespace: crazon
spec:
  type: ExternalName
  externalName: crazonhttp.com
